Quick test of the README.

--- a/utilities/user-manual.html
+++ b/utilities/user-manual.html
@@ -75,7 +75,7 @@ body { margin:0; padding:0; font-size:14px; color:#4F5155;
 svn checkout https://worldthatworks.svn.beanstalkapp.com/patterns/trunk patterns
 </pre>
 
-<p>Once you have a working copy, you can make type edits and run <samp>pattern.php</samp> and other scripts to update the overall structure of the book. The scripts are designed to work with Subversion, so they will add, move, and delete files using Subversion commands. The instructions below indicate how to add, delete and rename patterns, groups and sections so that the book will retain it's numeric integrity.</p>
+<p>Once you have a working copy, you can make type edits and run <samp>pattern.php</samp> and other scripts to update the overall structure of the book. The scripts are designed to work with Subversion, so they will add, move, and delete files using Subversion commands. The instructions below indicate how to add, delete and rename patterns, groups and sections so that the book will retain its numeric integrity.</p>
 
 <p>Once changes are made to the site, you can commit your changes to the repository:</p>
 
